--- a/Bill.yml
+++ b/Bill.yml
@@ -1,6 +1,32 @@
 server:
   port: 8085
+  
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/microservices?useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
 
+eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 5
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    registry-fetch-interval-seconds: 5
+    register-with-eureka: true
+    
+
+    
 spring.cloud.stream.bindings:
   input:
     destination: bill
@@ -9,3 +35,22 @@ spring.cloud.stream.bindings:
       partitioned: false
       instanceCount: 1
       instanceIndex: 0
+      
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 1000
+            iterruptOnTimeout: true
+            interruptOnCancel: false
+      circuitBreaker:
+        enabled: true
+        requestVolumeThreshold: 20
+        sleepWindowInMilliseconds: 5000
+        errorThresholdInMilliseconds: 50
+        forceOpen: false
+        forceClosed: false
