--- a/application.yml
+++ b/application.yml
@@ -1,18 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/microservices
+    url: jdbc:mysql://localhost:3306/microservices?useSSL=false
     username: root
     password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
   rabbitmq:
-    host: salamander.rmq.cloudamqp.com
-    username: dfvkhzrk
-    virtual-host: dfvkhzrk
-    password: z0DHJZxoxCoI9GLeJzdkFfLZ7EVOkMsB
+    host: hornet.rmq.cloudamqp.com
+    username: dyeowntt
+    virtual-host: dyeowntt
+    password: 0LrXtN3QxWmnJ1VA251Wpl5vg-IambPI
   sleuth:
     enabled: false
   zipkin:
