--- a/Bill.yml
+++ b/Bill.yml
@@ -1,7 +1,16 @@
 server:
   port: 8084
 
-spring.cloud.stream.bindings:
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/microservices?useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
   input:
     destination: bill
     group: bill
