Lab-4 Added custom property

--- a/Bill.yml
+++ b/Bill.yml
@@ -9,3 +9,6 @@ spring.cloud.stream.bindings:
       partitioned: false
       instanceCount: 1
       instanceIndex: 0
+      
+custom:
+    message: Hello
