--- a/application.yml
+++ b/application.yml
@@ -10,9 +10,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL5Dialect
   rabbitmq:
     host: hornet.rmq.cloudamqp.com
-    username: dyeowntt
-    virtual-host: dyeowntt
-    password: 0LrXtN3QxWmnJ1VA251Wpl5vg-IambPI
+    username: dyeowntt_123
+    virtual-host: dyeowntt_123
+    password: 0LrXtN3QxWmnJ1VA251Wpl5vg-IambPI_123
   sleuth:
     enabled: false
   zipkin:
