--- a/application.yml
+++ b/application.yml
@@ -24,6 +24,15 @@ eureka:
     registerWithEureka: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+      
+feign:
+  hystrix:
+    enabled: true
+  client:
+    config:
+      default:
+        connectTimeout: 100000
+        readTimeout: 100000
 
 management:
   security:
