--- a/application.yml
+++ b/application.yml
@@ -31,8 +31,8 @@ feign:
   client:
     config:
       default:
-        connectTimeout: 100000
-        readTimeout: 100000
+        connectTimeout: 1000000
+        readTimeout: 1000000
 
 management:
   security:
