--- a/application.yml
+++ b/application.yml
@@ -34,6 +34,12 @@ feign:
         connectTimeout: 1000000
         readTimeout: 1000000
 
+hystrix:
+  command:
+    default:
+      circuitBreaker:
+        requestVolumeThreshold: 3
+
 management:
   security:
     enabled: false
